fix: 修改toolbar的z-index

--- a/functions/miseckill/styles/index.scss
+++ b/functions/miseckill/styles/index.scss
@@ -30,6 +30,7 @@ a {
 
   position: sticky;
   top: 0;
+  z-index: 10;
 }
 
 .aside {
